--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,8 +1,8 @@
+/* Then Tailwind */
 @import "tailwindcss";
-
 @tailwind utilities;
 
-* {
-  padding: 0;
-  margin: 0;
+
+.no-scroll::-webkit-scrollbar {
+  display: none; /* hide in Chrome/Safari/Edge */
 }
